Update Game4LifeDMS.java
Updated the old code to add the database features.